# squeezy

./: .gitignore  BACKLOG.md  DEVELOPER.md  Dockerfile  Makefile  README.md  TODO.md  __init__.py  audio_player.py  config.py  lms_client.py  metadata.py  protocol_handler.py  pyproject.toml  release.sh  run.sh  server_connection.py  slimproto.py  squeezy.py  stream_decoder.py
.claude/: CLAUDE.md
.github/workflows/: test.yml  update-homebrew-tap.yml
src/squeezy/: __main__.py  squeezy.py
src/squeezy/audio/: __init__.py  player.py  stream_decoder.py
src/squeezy/config/: __init__.py  config.py  metadata.py
src/squeezy/network/: __init__.py  lms_metadata.py  server_connection.py  status_server.py
src/squeezy/protocol/: __init__.py  handler.py  slimproto.py
tests/: conftest.py  linux_distro_test.sh  lms_client.py  test_integration.py  test_p1_reliability.py  test_p2_features.py  test_p3_robustness.py
