[project]
name = "squeezy"
version = "0.2.0"
description = "Minimal Squeezebox player for Lyrion Music Server"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["squeezebox", "lyrion", "slimproto", "audio", "music-player"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Sound/Audio :: Players",
]
dependencies = [
    "miniaudio>=1.59",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-timeout>=2.0",
]

[project.urls]
Homepage = "https://github.com/catcatcatcatcatcatcatcatcatcat/squeezy"
Issues = "https://github.com/catcatcatcatcatcatcatcatcatcat/squeezy/issues"

[project.scripts]
squeezy = "squeezy:main"
