[project]
name = "squeezy"
version = "0.6.0"
description = "Minimal Squeezebox player for Lyrion Music Server"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["squeezebox", "lyrion", "slimproto", "audio", "music-player"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Sound/Audio :: Players",
]
dependencies = [
    "miniaudio>=1.59",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-timeout>=2.0",
]

[project.urls]
Homepage = "https://github.com/catcatcatcatcatcatcatcatcatcat/squeezy"
Issues = "https://github.com/catcatcatcatcatcatcatcatcatcat/squeezy/issues"

[project.scripts]
squeezy = "squeezy.squeezy:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["squeezy*"]

[tool.setuptools.package-data]
squeezy = ["py.typed"]
